Fix Android 8 compatibility and verify APK build
Add the GPLv3 copyright notice, use the Android 8-compatible URL encoder overload, and remove the API 27-only theme attribute.

Validated by GitHub Actions: privacy audit, unit tests, Android lint, and debug APK assembly.